# Little-John--A-LangChain-IoT-Agent

./: .env.example  README.md  agent.py  gui.py  pyproject.toml  robot_main.py
middleware/: speechToTextMiddleware.py  textToSpeechMiddleware.py
recorder/: audio_recorder.py
robot_recorder/: audio_recorder.py
server_led/: curl_test.sh  led_server_microdot_raspy.py
